# WMLCI

./: .gitignore  .zenodo.json  README.md  pyproject.toml  requirements.txt
wmlci/: __init__.py  common.py  disaggregation.py  editImporter.py  editJsonLdImporter.py  edit_original_v16_model.py  errorLogging.py  jsonld_loader.py  lca.py  log.py  metadata.py  method_config.py  openlca.py  settings.py  technosphere_updates.py  uslciCleaning.py  uslciTest.py  wmlci_log.py
wmlci/data/: README.md  prodPrvErrorTracking.xlsx
wmlci/data/crudeOilProductionMixtureAtExtraction/: openlca.json
wmlci/data/crudeOilProductionMixtureAtExtraction/actors/: 19c8b390-9dc6-440a-b27d-20a4b3cff027.json  c0df2fa9-7eb9-477f-b3c0-5a80439eb30d.json
wmlci/data/crudeOilProductionMixtureAtExtraction/flow_properties/: 01846770-4cfe-4a25-8ad9-919d8d378345.json  05e42ba1-dbcd-4dc2-b735-a2f17dd211ae.json  0ddc622a-bc4a-4cf8-a551-9e112864b77f.json  441238a3-ba09-46ec-b35b-c30cfba746d1.json  45915a2c-6ee8-45bd-8a46-070a7261558e.json  4e10f566-0358-489a-8e3a-d687b66c50e6.json  58ea2de8-1f31-4248-9b03-18ec5d8db13b.json  64771383-534c-4051-84ca-e195564d5425.json  838aaa20-0117-11db-92e3-0800200c9a66.json  838aaa23-0117-11db-92e3-0800200c9a66.json  8766e10f-9f41-4db0-8173-ad0d002a5b98.json  8a9107c2-62a2-4997-95b0-6944c80b774e.json  93a60a56-a3c8-11da-a746-0800200b9a66.json  93a60a56-a3c8-17da-a746-0800200c9a66.json  93a60a56-a3c8-19da-a746-0800200c9a66.json  93a60a56-a3c8-21da-a746-0800200c9a66.json  93a60a56-a3c8-22da-a746-0800200c9a66.json  ac95ed26-5038-4862-8b82-94f1412875cd.json  b7ffb330-95a8-4815-a78c-47fcdee3b768.json  c0447923-0e60-4b3c-97c2-a86dddd9eea5.json  c6984745-192d-416f-9728-d6169ba6267f.json  e0d963f9-d6a4-42a5-90e9-fff8452aa2af.json  e2f7001e-a331-4fc7-8052-c0b9bcf6a05f.json  ecbe0a5d-f397-4b74-993d-32d231e4bcf9.json  f6811440-ee37-11de-8a39-0800200c9a66.json  fd9a098b-253e-4f1e-986d-76a775c51722.json  fdfecf14-ff8a-4e17-b2b2-f938c4b5cc27.json
wmlci/data/crudeOilProductionMixtureAtExtraction/flows/: 001c61e3-90e1-3e75-a5ad-76867831832d.json  00848592-5bac-3fa2-bb5c-cb22a04d37c3.json  013a8443-33d4-355a-9fdf-83bd7cf71121.json  0153272f-87a9-3542-b444-2d9555452d6e.json  01d7a68d-4407-3ed6-b571-871265d001fe.json  01ec7937-eea7-3830-aaf6-3be74f4d952b.json  023da7fa-7089-3bef-a964-16b047d21d34.json  03258b56-e70b-3c2d-a883-62e657fe8035.json  03693fb0-a5af-31a1-97a0-0ea691142d41.json  0419f9d9-4a91-3223-abfe-bce431215656.json  041ab3bf-43ba-35f3-adcb-424bda30a6ee.json  04882007-686b-3a15-a1fb-88f256ec82cf.json  057c0120-6f02-359f-b967-0b5fa86af301.json  058caf49-82b9-3b14-abe6-a6f11be0b09b.json  05fc96ec-25db-3da2-9706-83d0a6165852.json  0702afcb-0b66-3f30-a5c7-e10fbe896a4b.json  0727fbdb-9d8e-3fed-bc91-c8d907e90249.json  088bcbc3-4354-36b5-bcc9-468890f86008.json  08ede23b-a073-4a7a-8552-48eeb63c4291.json  09f7f4b7-304f-397d-a894-5bdd0dfdc1a6.json  0a61808a-df04-3ec0-8c2b-93d4f5cf9fbf.json  0a6a4847-a4c6-3181-80ce-8962aa5eefc3.json  0a9c91a2-3a9b-318c-a87a-4138ba2ae034.json  0cc4933c-23bb-3237-9077-c0db2e5aba21.json  0cc6f1f6-5ff4-36c7-ba84-472348971d75.json  0e44e579-abb0-3c77-af64-c774d65be529.json  0e63906d-fa11-39b4-9347-7056a43bfe6a.json  0e63d1db-e383-3c9a-b02a-b5eebafe87d1.json  107adb1a-fcd2-3cea-80b2-3377cbb62bec.json  10994741-b387-3aef-a485-1b3bb7f32268.json  1300e0a5-33d2-3f3d-8815-a8934c4fb061.json  13e3e81c-73ee-328e-8cd1-d4e29f14d586.json  146922d3-b36f-33ee-8ec3-7f60be57d5f6.json  14e9f850-290d-341c-94ec-0b76786f3ea4.json  1662342c-da9e-339d-ac7d-d73cbabe453c.json  17dac1fd-efcf-3118-bfa7-69313dbf8b3f.json  (+309 more)
wmlci/data/sourceData/: README.md
wmlci/extract/: API_Keys.env.example  README.md  __init__.py  download_source_data_from_api.py  extract_common.py  extract_source_data_from_script.py  fed_lca_commons.yaml  ipcc_gwp.yaml  swolfpy_WTE_to_JSON.py  traci_2_2.yaml  us_electricity_baseline.yaml  uslci.yaml  waste_reduction_model_v16_pilot.yaml
wmlci/methods/: __init__.py  v16.yaml  wmlci_demo.yaml  wmlci_pilot.yaml
wmlci/technosphere_updates/: msw_landfilling_fw_LfgNtlAvg_CollecTyp_CondNtlAvg.yaml  msw_recycling_mixed_plastics.yaml
wmlci/utils/: __init__.py
wmlci/utils/flowmapping/: README.md  SwolfPy_WTE_Tech_flow_map.xlsx
wmlci/utils/model_defaults/: global_defaults.yaml  process_parameters.yaml
(+229 files in other folders)
