[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wmlci"
version = "0.1.0"
description = "Waste Management Life Cycle Inventory Model Assembler and Calculator"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["WARM", "waste management", "life cycle inventory", "emissions"]
authors = [
    {name = "Catherine Birney"},
    {name = "Martin Christie"},
    {name = "Andrew Beck"},
    {name = "Wesley W. Ingwersen", email = "ingwersen.wesley@epa.org"},
]
dependencies = [
    "esupy @ git+https://github.com/USEPA/esupy.git",

    "pip>=23.3",     # must specify when using pip installs
    "numpy<2 ",     # <2.0 required by BW2 pkgs as of Apr. 2025
    "pandas",
    "requests",
    "scipy",
    "stats_arrays==0.7",

    # BW2 pkgs
    "brightway25 @ git+https://github.com/brightway-lca/brightway25.git@1.1.1",
    "bw2analyzer==0.11.7",
    "bw2calc==2.0.2",
    "bw2data==4.4.4",
    "bw2io @ git+https://github.com/maqchristie/brightway2-io.git@develop#egg=bw2io",
    "bw2parameters==1.1.0",
    "bw_migrations==0.2",
    "bw_processing==1.0",
    "bw_simapro_csv @ git+https://github.com/brightway-lca/bw_simapro_csv.git@0.4",
    "ecoinvent_interface==3.1",
    "matrix_utils==0.6",
    "mrio_common_metadata==0.2.1",
    "multifunctional @ git+https://github.com/brightway-lca/multifunctional.git@1.0",
    "randonneur==0.6.1",
    "randonneur_data==0.5.5"  # expect 0.6 to hit conda channels soon
]

# Optional dependencies
#[project.optional-dependencies]

[project.urls]
"Homepage" = "https://github.com/USEPA/wmlci"
